--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "hapipal-boilerplate",
-  "version": "3.0.0",
+  "name": "iut-project",
+  "version": "1.0.0",
+  "description": "",
+  "author": "",
+  "license": "ISC",
   "main": "lib/index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
     "start": "node server",
     "test": "lab -a @hapi/code -I \"__core-js_shared__,CSS,regeneratorRuntime,core\" -L",
@@ -9,10 +16,16 @@
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "@hapi/jwt": "^3.2.0",
     "@hapipal/haute-couture": "4.x.x",
+    "@hapipal/schmervice": "^3.0.0",
     "@hapipal/schwifty": "6.x.x",
+    "@randombullshitgo/iut_encrypt": "^1.0.0",
+    "exiting": "6.0.1",
     "joi": "17.x.x",
-    "objection": "2.x.x"
+    "mysql": "^2.18.1",
+    "objection": "2.x.x",
+    "sqlite3": "5.0.2"
   },
   "peerDependencies": {
     "knex": "0.21.x"
@@ -23,9 +36,9 @@
     "@hapi/eslint-plugin-hapi": "4.x.x",
     "@hapi/glue": "8.x.x",
     "@hapi/hapi": "20.x.x",
-    "@hapi/inert": "6.x.x",
     "@hapi/hoek": "9.x.x",
-    "@hapi/lab": "24.x.x",
+    "@hapi/inert": "6.x.x",
+    "@hapi/lab": "23.x.x",
     "@hapi/vision": "6.x.x",
     "@hapipal/confidence": "6.x.x",
     "@hapipal/hpal": "3.x.x",
@@ -34,10 +47,7 @@
     "babel-eslint": "10.x.x",
     "dotenv": "8.x.x",
     "eslint": "7.x.x",
-    "exiting": "6.x.x",
-    "hapi-swagger": "14.x.x"
-    "exiting": "6.x.x",
-    "knex": "0.21.x",
-    "sqlite3": "5.x.x"
+    "hapi-swagger": "14.x.x",
+    "knex": "^0.21.16"
   }
 }
